# flutter_ffi

./: README.md  pubspec.yaml
android/: build.gradle  gradle.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/weilu/flutter_ffi/: MainActivity.kt
android/app/src/profile/: AndroidManifest.xml
ios/Runner/: Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/ffi/: native_ffi.dart  rust_ffi.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml
native/rust_demo.xcodeproj/: project.pbxproj
native/rust_demo.xcodeproj/xcuserdata/weilu.xcuserdatad/xcschemes/: xcschememanagement.plist
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  lib.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
